Add forceTransitFeedAutoDiscovery to the build config.